2003-02-26  Bradley Bell  <btb@icculus.org>

	* main/gamemine.c: texture conversion for d1 shareware

2003-02-26  Martin Schaffner <maschaffner@gmx.ch>

	* main/gamemine.c: better texture conversion for d1 levels

2003-02-26  Micah J. Lieske  <MicahJon@compuserve.com>

	* main/kconfig.c: fix joystick support under MinGW

2003-02-26  Bradley Bell  <btb@icculus.org>

	* main/playsave.c: fix swapping glitch

	* NEWS, configure.ac, readme.txt: clean stuff up, getting ready
	for 0.2.0 release

	* main/titles.c: begin support for rendering spinning robots in
	briefings

	* main/mission.c, main/mission.h: load d1 oem mission, d1 v1.0
	mission

	* main/gamemine.c: load d1 shareware levels!

2003-02-25  Bradley Bell  <btb@icculus.org>

	* TODO: update

	* autogen.sh: add warning about old auto* versions, use
	automake --copy

2003-02-24  Bradley Bell <btb@icculus.org>

	* main/gameseq.c, main/movies.c, main/titles.c: Descent I
	briefings mostly working
	* main/movie.c, main/titles.c: fixed some more briefing glitches

2003-02-23  Bradley Bell <btb@icculus.org>

	* main/movie.c: fixed crash when using shareware data files
	without -nohires
	* arch/sdl/digi.c: fix crash on non-existent sounds
	(i.e. shareware data)

2003-02-22  Bradley Bell <btb@icculus.org>

	* main/titles.c: fixed fullscreen toggle in briefings

2003-02-21  Bradley Bell <btb@icculus.org>

	* configure.ac: check for mingw when enabling nasm
	* main/playsave.c: enable loading player files of either byte
	order

2003-02-20  Bradley Bell <btb@icculus.org>

	* main/bm.c, main/bm.h, main/endlevel.c: fixed up endlevel stuff
	* arch/sdl/digi.c, main/kludge.c: oops, meant to say: fixed bug
	#343, not "rest of solution to bug #344"
	* arch/sdl/timer.c, include/timer.h: revert to more accurate
	timers
	* main/kludge.c: partial solution to bug #344
	* Makefile.am, tools/cvs2cl/cvs2cl.pl: get rid of cvs2cl.pl
	* compilerdefs.txt: added linux/mips info
	* ChangeLog: clean up changelog
