@@ -1,3 +1,7 @@
+2003-02-27  Martin Schaffner <maschaffner@gmx.ch>
+
+	* main/render.c: added replacement qsort for solaris
+
 2003-02-26  Bradley Bell  <btb@icculus.org>
 
 	* main/gamemine.c: texture conversion for d1 shareware
